Fixed Image path and horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Poppins';
     font-size: 22px;
+    overflow-x: hidden;
 }
 @media screen and (max-width: 768px){
 .mobile-background{
